--- a/Presentation/CarBook.WebAPI/appsettings.json
+++ b/Presentation/CarBook.WebAPI/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-1L7P9M8;Database=CarBookDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  "AllowedHosts": "*"
 }
